--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <img src=".\images\3.jpg" style="width:100%;height: 23.5rem">
+                <div class="thumbnail">
+                    <img src="./images/3.jpg" style="width:100%; height: 23.5rem">
+                </div>
             </div>
         </div>
         <div class="background-wrapper" style="background-image: url(./images/3.jpg);">
